SERVER-62827 Prevent rpc::upconvertRequest from erroneously duplicating top-level $readPreference field in command object