jstests/libs/override_methods/set_read_preference_secondary.js
@@ -134,6 +134,12 @@ function runCommandWithReadPreferenceSecondary(
     }
 
     if (shouldForceReadPreference) {
+        if (commandObj.hasOwnProperty("$readPreference") &&
+            !bsonBinaryEqual({_: commandObj.$readPreference}, {_: kReadPreferenceSecondary})) {
+            throw new Error("Cowardly refusing to override read preference of command: " +
+                            tojson(commandObj));
+        }
+
         if (commandObj === commandObjUnwrapped) {
             // We wrap the command object using a "query" field rather than a "$query" field to
             // match the implementation of DB.prototype._attachReadPreferenceToCommand().
@@ -142,12 +148,6 @@ function runCommandWithReadPreferenceSecondary(
             // We create a copy of 'commandObj' to avoid mutating the parameter the caller
             // specified.
             commandObj = Object.assign({}, commandObj);
-        }
-
-        if (commandObj.hasOwnProperty("$readPreference") &&
-            !bsonBinaryEqual({_: commandObj.$readPreference}, {_: kReadPreferenceSecondary})) {
-            throw new Error("Cowardly refusing to override read preference of command: " +
-                            tojson(commandObj));
         }
 
         commandObj.$readPreference = kReadPreferenceSecondary;
